gcse stuff moves into news subdirectory.

--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -11,7 +11,7 @@
   <code>g77</code> version 0.5.23</a>.
   <li>Vast improvements in the C++ compiler; so many they have 
   <a href="c++features.html">page of their own!</a>
-  <li>Compiler implements <a href="../gcse.html">global common subexpression
+  <li>Compiler implements <a href="../news/gcse.html">global common subexpression
   elimination and global copy/constant propagation.</a>
   <li>More major improvements in the <a href="../news/alias.html">alias analysis
   code</a>.
