--- a/htdocs/lcm.html
+++ b/htdocs/lcm.html
@@ -11,7 +11,7 @@
 optimizer framework (LCM).
 
 <p>LCM is a general technique for performing global optimizations such
-as <a href="gcse.html">global cse and partial redundancy elimination</a>.
+as <a href="news/gcse.html">global cse and partial redundancy elimination</a>.
 
 <p>LCM is an improvement over other global redundancy elimination algorithms
 because it can typically find more redundancies and minimize register lifetimes.
