--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -210,7 +210,7 @@ framework</b></a>.
 
 <dt><b>May 18, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="gcse.html"><b>gcse optimization pass</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="news/gcse.html"><b>gcse optimization pass</b></a>.
 </dd>
 
 <dt><b>May 15, 1998</b></dt>
