hoist.html moves into news subdirectory. commit remaining changes from moving gcse stuff into news subdirectory.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -26,7 +26,7 @@
       front-end has been integrated.  A <a href="http://egcs.cygnus.com/javaannounce.html">runtime library</a> is available separately.
   <li><a href="../news/chill.html">Chill</a> front-end and runtime has been
       integrated.
-  <li><a href="../hoist.html">Memory Load hoisting/store sinking</a> in loops.
+  <li><a href="../news/hoist.html">Memory Load hoisting/store sinking</a> in loops.
   <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
       default.
   <li>Experimental internationalization support.
