--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -179,7 +179,7 @@ optimization</a> support.
 
 <dt><b>August 19, 1998</b></dt>
 <dd>
-  Mark Mitchell donates <a href="hoist.html"><b>load hoisting and store
+  Mark Mitchell donates <a href="news/hoist.html"><b>load hoisting and store
   sinking</b></a> support.
 </dd>
 
