lcm.html moves into news subdirectory

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -8,7 +8,7 @@
 <p> This page is still under constrution.
 <ul>
   <li>Just getting started...  More stuff to come.
-  <li><a href="../lcm.html">Global CSE using lazy code motion algorithms</a>.
+  <li><a href="../news/lcm.html">Global CSE using lazy code motion algorithms</a>.
   <li><a href="../news/cprop.html">Improved global constant/copy propagation</a>.
   <li><a href="../news/cfg.html">Improved control flow graph analysis and
       manipulation</a>.
