--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -51,7 +51,7 @@ the stack.
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates
 <a href="news/cprop.html">improved global constant propagation</a> and
-<a href="lcm.html">lazy code motion optimizer framework</a>.
+<a href="news/lcm.html">lazy code motion optimizer framework</a>.
 </dd>
 
 <dt><b>March 7, 1999</b></dt>
