Move scheduling/pipelining stuff into news subdirectory

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -146,8 +146,8 @@ Bernd Schmidt donates <a href="spill.html">localized spilling support</a>.
 <dt><b>September 22, 1998</b></dt>
 <dd>
 <a href="http://www.ibm.com/">IBM Corporation</a> delivers an update
-to the IBM Haifa <a href="scheduler.ps">instruction scheduler</a> and
-new <a href="pipelining.ps">software pipelining and branch
+to the IBM Haifa <a href="news/scheduler.ps">instruction scheduler</a> and
+new <a href="news/pipelining.ps">software pipelining and branch
 optimization</a> support.
 </dd>
 
