sparc.html & spill.html move into news subdir.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -15,7 +15,8 @@
   <li><a href="../news/egcs-vcg.html">Ability to dump cfg information and
       display it using vcg</a>.
   <li><a href="../news/dse.html">Local dead store elimination</a>.
-  <li><a href="../spill.html">Localized register spilling</a> to improve
+  <li><a href="../news/sparc.html">Sparc backend rewrite</a>.
+  <li><a href="../news/spill.html">Localized register spilling</a> to improve
       speed and code density on small register class machines.
   <li>The new faster scheme for fixing vendor header files is eanbled by
       default.
