--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -140,7 +140,7 @@ http://sourceware.cygnus.com</a>.
 
 <dt><b>October 27, 1998</b></dt>
 <dd>
-Bernd Schmidt donates <a href="spill.html">localized spilling support</a>.
+Bernd Schmidt donates <a href="news/spill.html">localized spilling support</a>.
 </dd>
 
 <dt><b>September 22, 1998</b></dt>
@@ -174,7 +174,7 @@ optimization</a> support.
 
 <dt><b>August 25, 1998</b></dt>
 <dd>
-  David Miller donates rewritten <a href="sparc.html"><b>sparc backend</b></a>.
+  David Miller donates rewritten <a href="news/sparc.html"><b>sparc backend</b></a>.
 </dd>
 
 <dt><b>August 19, 1998</b></dt>
