--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -27,14 +27,15 @@
 
   <li>G++ is also converting toward the ISO C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
-  versions of g++) may no longer be accepted.
+  versions of g++) may no longer be accepted.  The flag -fpermissive may
+  allow some non-conforming code to compile with gcc-2.95.
 
   <li>gcc-2.95 compiled C++ code is not binary compatible with egcs-1.1,
   egcs-1.0.x or gcc-2.8.x.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  March 15, 1999</i>
+<p><i>Last modified:  June 20, 1999</i>
 
 </body>
 </html>
