Update critical bugfreeze date as well as release date for 1wk slippage.

--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -59,14 +59,14 @@ we will not have to slip the schedule further.
 
   <p> Wide scale, release focused testing should start on or before May 17.
 
-  <p> <li> <b>June 15, 1999. Critical Bug Freeze Date</b>.
-  <p>June 15, 1999 is still the target date for freezing the sources.  After
-  this date only critical bugfixes will be accepted for inclusion in gcc-2.95.
+  <p> <li> <b>June 22, 1999. Critical Bug Freeze Date</b>.
+  <p>June 2, 1999 is updated the target date for freezing the sources.  After
+  this date only critical bugfixes will be accepted for inclusion in gcc-2.95
+  (original critical bugfreeze date was June 15, 1999).
 
-  <p> <li> <b>July 1, 1999. Tenative Release date</b>.
-  <p>July 1, 1999 is the target date for the actual release.  This may
-  change based on testing status and other issues.  But we should shoot for
-  July 1.
+  <p> <li> <b>July 8, 1999. Tenative Release date</b>.
+  <p>July 8, 1999 is the updated target date for the actual release
+  (original date was July 1, 1999).
 </ul>
 </ul>
 
@@ -79,7 +79,7 @@ will hopefully start to appear soon as well as updated on the issues mentioned
 in the list above.
  
 <hr>
-<i>Last modified on May 31, 1999.</i>
+<i>Last modified on June 22, 1999.</i>
 
 </body>
 </html>
