Add some libgjc build results Add glibc-2.1 testing results Add rh6.0 build failures

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -89,7 +89,7 @@ build
 regressions
 </th>
 <th>
-java tests
+libjava
 </th>
 <th>
 libg++ tests
@@ -204,6 +204,7 @@ OK
 OK
 </td>
 <td>
+BUILDS
 </td>
 <td>
 OK
@@ -241,6 +242,7 @@ OK
 OK
 </td>
 <td>
+BUILDS
 </td>
 <td>
 OK
@@ -348,6 +350,7 @@ OK
 OK
 </td>
 <td>
+FAIL (multilibs)
 </td>
 <td>
 OK
@@ -455,13 +458,7 @@ Platform
 linux-2.2.10
 </th>
 <th>
-linux-2.3.7
-</th>
-<th>
 glibc-2.1.1
-</th>
-<th>
-redhat-5.2
 </th>
 <th>
 redhat-6.0
@@ -469,15 +466,12 @@ redhat-6.0
 </tr>
 <tr>
 <td>
-alphaev5-unknown-linux-gnu
+alphaev6-unknown-linux-gnu
 </td>
 <td>
 </td>
 <td>
-</td>
-<td>
-</td>
-<td>
+math fails
 </td>
 <td>
 </td>
@@ -490,11 +484,7 @@ i586-unknown-linux-gnu
 OK
 </td>
 <td>
-</td>
-<td>
 OK
-</td>
-<td>
 </td>
 <td>
 </td>
@@ -507,12 +497,15 @@ i686-unknown-linux-gnu
 OK
 </td>
 <td>
+OK
 </td>
 <td>
-</td>
-<td>
-</td>
-<td>
+compat-binutils
+compat-egcs
+kdelibs
+korganizer
+python
+sgml-tools
 </td>
 </tr>
 <tr>
@@ -522,10 +515,7 @@ powerpc-unknown-linux-gnu
 <td>
 </td>
 <td>
-</td>
-<td>
-</td>
-<td>
+glob fails
 </td>
 <td>
 </td>
@@ -533,10 +523,6 @@ powerpc-unknown-linux-gnu
 <tr>
 <td>
 sparc-unknown-linux-gnu
-</td>
-<td>
-</td>
-<td>
 </td>
 <td>
 </td>
