Add a link to our "Egcstensions" page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,8 +25,9 @@
 </P>
 <H2>Development</H2>
 <P>
-<A HREF="contribute.html">Contributing</a><BR>
-<A HREF="projects.html">Open projects</a><BR>
+<A HREF="contribute.html">Contributing</A><BR>
+<A HREF="projects.html">Open projects</A><BR>
+<A HREF="egcstensions.html">Egcstensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="cvswrite.html">CVS write access</A>
 </P>
@@ -84,6 +85,12 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>June 15, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated a major rewrite of the Intel IA-32
+back end, focusing on better optimization for the Pentium II.
+</dd>
 
 <dt><b>May 27, 1999</b></dt>
 <dd>
@@ -161,7 +168,7 @@ Jason Merrill.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on June 18, 1999.</i></small>
+<small><i>Last modified on June 22, 1999.</i></small>
 </address>
 
 </body>
