Add libgcj build status for some hosts "glob" tests were not a egcs/glibc problem on powerpc-linux after all.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -128,6 +128,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+boehm-gc
 </td>
 <td>
 OK
@@ -147,6 +149,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+ld coredump
 </td>
 <td>
 OK
@@ -166,6 +170,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+libgjc.so link
 </td>
 <td>
 OK
@@ -185,6 +191,7 @@ OK
 OK
 </td>
 <td>
+BUILDS
 </td>
 <td>
 OK
@@ -515,7 +522,7 @@ powerpc-unknown-linux-gnu
 <td>
 </td>
 <td>
-glob fails
+OK
 </td>
 <td>
 </td>
@@ -546,7 +553,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on June 22, 1999.</i>
+<p><i>Last modified on June 23, 1999.</i>
 
 </body>
 </html>
