Add ATMEL AVR port.

--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -19,12 +19,15 @@ to enhance egcs to a point where it generates code as fast as PGCC,
 but until that work is finished PGCC is still maintained, and often
 achieves substantial speed improvements over egcs and gcc.</p>
 
+<h2><a href="http://medo.fov.uni-mb.si/mapp/uTools/">ATMEL AVR port</a></h2>
+<p>This is a experimental egcs port for the 8bit ATMEL AVR micro
+controllers.</p>
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<p><i>Last modified:  December 31, 1998</i>
+<p><i>Last modified:  June 23, 1998</i>
 
 </body>
 </html>
