--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -20,34 +20,52 @@ the Java Language.
 
 <h2>Mailing lists</h2>
 
-<p>We have two mailing lists set up for our Java related
-work, <a href="/ml/java-announce/"><tt>java-announce</tt></a>
-and <a href="/ml/java-discuss/"><tt>java-discuss</tt></a>.
-<tt>java-announce</tt> is a low-volume, moderated list which will
-have announcements related to this project.  <tt>java-discuss</tt>
-is an open list where people are invited to discuss the software
-we're releasing, ask questions, post patches, etc.  Both are <a
-href="http://sourceware.cygnus.com/infra/ezman/ezman-1.html">administered
-by the ezmlm/idx mailing list software</a>, or you can subscribe with
-the entry boxes below:
+<p>We have three mailing lists set up for our Java related
+work: 
 
-<p>To subscribe to the <tt>java-announce</tt> mailing list, enter your
-e-mail address:
+<dl>
+<dt><b><a href="/ml/java-announce/">java-announce</a></b></dt>
+<dd>
+   Low volume, moderated, announcements-only mailing list,
+</dd>
+<dt><b><a href="/ml/java-discuss/">java-discuss</a></b></dt>
+<dd>
+   Moderate volume discussion/question mailing list,
+</dd>
+<dt><b><a href="/ml/java-patches/">java-patches</a></b></dt>
+<dd>
+   Moderate volume patch submission/discussion mailing list.
+</dd>
+</dl>
+
+<p>Use this handy little form to subscribe or unsubscribe from any
+of these lists:
+
 <blockquote>
- <form method="get" action="/cgi-bin/subscribe-sourceware">
-     <input type="hidden" name="listname" value="java-announce">
-     <input type="text" name="username" size="10"> <input type="Submit" name="submit" value="Sign me up!">
- </form>
+<form method="get" action="/cgi-bin/ml-request">
+  Mailing list: 
+  <select name="listname">
+   <option value="java-announce">java-announce
+   <option value="java-discuss">java-discuss
+   <option value="java-patches">java-patches
+  </select>
+  <tt>&nbsp;</tt>
+  Your e-mail address:
+  <input type="text" name="username" size="14">
+ <br>
+  <input type="checkbox" name="digest">Digest version
+  <tt>&nbsp;</tt>
+  <select name="operation">
+    <option value="subscribe">subscribe
+    <option value="unsubscribe">unsubscribe
+  </select>
+  <tt>&nbsp;</tt>
+ <input type="Submit" name="submit" value="Send in the request">
+</form>
 </blockquote>
 
-<p>To subscribe to the <tt>java-discuss</tt> mailing list, enter your
-e-mail address:
-<blockquote>
- <form method="get" action="/cgi-bin/subscribe-sourceware">
-     <input type="hidden" name="listname" value="java-discuss">
-     <input type="text" name="username" size="10"> <input type="Submit" name="submit" value="Sign me up!">
- </form>
-</blockquote>
+<p>If you have any questions about the mailing lists on this site,
+see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 
 <h2>Who we are</h2>
 
