Add an note concerning the IA-32 announcement (which slipped in with a recent commit) and gcc 2.95.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,6 +90,7 @@ maintain and improve quality.
 <dd>
 Cygnus Solutions has donated a major rewrite of the Intel IA-32
 back end, focusing on better optimization for the Pentium II.
+<small>(Note that this will not yet be included in gcc 2.95.)</small>
 </dd>
 
 <dt><b>May 27, 1999</b></dt>
@@ -168,7 +169,7 @@ Jason Merrill.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on June 22, 1999.</i></small>
+<small><i>Last modified on June 23, 1999.</i></small>
 </address>
 
 </body>
