Add selection between searching the entire site and the site sans mailing list archives.

--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -5,14 +5,22 @@ all the publicly available WWW documents at this site.
 <p>
 <form method="post" action="/cgi-bin/htsearch">
 <font size=-1>
+
 Match: <select name=method>
 <option value=and>All
 <option value=or>Any
 </select>
+
 Format: <select name=format>
 <option value=builtin-long>Long
 <option value=builtin-short>Short
 </select>
+
+Limit to: <select name="exclude"> 
+<option value="/ml/">Regular pages (no mailing lists)</option>
+<option value="">Entire site (without mailing lists)</option>
+</select>
+
 Sort by: <select name=sort>
 <option value=score>Score
 <option value=time>Time
@@ -21,6 +29,7 @@ Sort by: <select name=sort>
 <option value=revtime>Reverse Time
 <option value=revtitle>Reverse Title
 </select>
+
 </font>
 <input type=hidden name=config value=htdig>
 <input type=hidden name=restrict value="">
