--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -6,28 +6,28 @@ all the publicly available WWW documents at this site.
 <form method="post" action="/cgi-bin/htsearch">
 <font size=-1>
 
-Match: <select name=method>
-<option value=and>All
-<option value=or>Any
+Match: <select name="method">
+<option value="and">All</option>
+<option value="or">Any</option>
 </select>
 
-Format: <select name=format>
-<option value=builtin-long>Long
-<option value=builtin-short>Short
+Format: <select name="format">
+<option value="builtin-long">Long</option>
+<option value="builtin-short">Short</option>
 </select>
 
 Limit to: <select name="exclude"> 
 <option value="/ml/">Regular pages (no mailing lists)</option>
-<option value="">Entire site (without mailing lists)</option>
+<option value="">Entire site (including mailing lists)</option>
 </select>
 
-Sort by: <select name=sort>
-<option value=score>Score
-<option value=time>Time
-<option value=title>Title
-<option value=revscore>Reverse Score
-<option value=revtime>Reverse Time
-<option value=revtitle>Reverse Title
+Sort by: <select name="sort">
+<option value="score">Score</option>
+<option value="time">Time</option>
+<option value="title">Title</option>
+<option value="revscore">Reverse Score</option>
+<option value="revtime">Reverse Time</option>
+<option value="revtitle">Reverse Title</option>
 </select>
 
 </font>
