--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -16,9 +16,10 @@ a choice of platforms to build upon.
 
 <p>Please send build/test results (in the format described below) to
 <a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>.
-<br>You may contact <a href="mailto:warrenl@cygnus.com">warrenl@cygnus.com</a>
-directly if you have questions or want to help in some other
-way with some phase of the libgcj-2.95 release cycle.
+<br>You may also address questions to 
+<a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>
+or to indicate that you would like to help in another way with some phase of the
+libgcj-2.95 release cycle.
 
 <h2>How to run the regression tests</h2>
 
@@ -35,6 +36,12 @@ build instructions on the libgcj page</a>.
 <p>  Next, go to the <tt>libjava/testsuite</tt> directory of your build
 tree and run <tt>'make check'</tt> after doing the following:
 <ul>
+  <li>It is highly desirable to include the 
+  <a href="http://sourceware.cygnus.com/mauve/">Mauve testsuite</a>
+  in the test run.
+  <br>The Mauve tests are available for
+  <a href="http://sourceware.cygnus.com/mauve/download.html">download</a>
+  via both anonymous cvs and snapshots.
   <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
   <li>In MAUVEDIR, sym link mauve-libgcj from the mauve-libgcj file in the
   libgcj source tree.  E.g.
