* libgcj-platforms.html: Added standard headers & footer.

--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -2,7 +2,8 @@
 <head>
 <title>libgcj-2.95 Platform Test Strategy</title>
 </head>
-<body>
+<!--#include virtual="/include/header-subpages.html"-->
+
 <h1 align="center">libgcj-2.95 Platform Test Strategy</h1>
 
 <h2> Platform Coverage </h2>
@@ -27,7 +28,7 @@ libgcj-2.95 release cycle.
 <a href="http://sourceware.cygnus.com/java/libgcj.html">libgcj</a> using the
 <b>libgcj-2_95-branch</b> branch of the source.
 <p>This can be done by including the <tt>'-rlibgcj-2_95-branch'</tt>
-option on the <tt>'cvs co'</tt> command line or downloading the
+flag on the <tt>'cvs co'</tt> command line or downloading the
 <a href="ftp://sourceware.cygnus.com/pub/java/snapshots/">snapshot</a>
 and then following the
 <a href="http://sourceware.cygnus.com/java/libgcj.html">
@@ -130,5 +131,4 @@ in this format.
 
 <p><i>Last modified on June 23, 1999.</i>
 
-</body>
-</html>
+<!--#include virtual="/include/footer-subpages.html"-->
