--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -109,6 +109,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+boehm-gc
 </td>
 <td>
 OK
@@ -231,8 +233,10 @@ OK
 OK
 </td>
 <td>
+UNTESTED
 </td>
 <td>
+UNTESTED
 </td>
 <td>
 N/A
@@ -282,8 +286,10 @@ u77-test.f
 io1.f
 </td>
 <td>
+UNTESTED
 </td>
 <td>
+UNTESTED
 </td>
 <td>
 N/A
@@ -319,6 +325,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+compiler bug
 </td>
 <td>
 OK
@@ -338,6 +346,8 @@ OK
 OK
 </td>
 <td>
+FAILS
+boehm-gc
 </td>
 <td>
 OK
@@ -377,6 +387,8 @@ OK
 OK
 </td>
 <td>
+FAIL
+(libzgcj.so link)
 </td>
 <td>
 OK
@@ -396,6 +408,7 @@ OK
 OK
 </td>
 <td>
+UNTESTED
 </td>
 <td>
 OK
@@ -415,6 +428,7 @@ OK
 OK
 </td>
 <td>
+UNTESTED
 </td>
 <td>
 OK
@@ -434,6 +448,7 @@ OK
 OK
 </td>
 <td>
+UNTESTED
 </td>
 <td>
 OK
@@ -520,6 +535,7 @@ sgml-tools
 powerpc-unknown-linux-gnu
 </td>
 <td>
+2.2.6 OK
 </td>
 <td>
 OK
