* libgcj-platforms.html: Revised status. 	* libgcj-sum.txt: Revised with Mauve results.

--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -89,14 +89,17 @@ Test Results
 i686-pc-linux-gnu
 </td>
 <td>
+--enable-threads=posix
 </td>
 <td>
 OK
 </td>
 <td>
-204 expected passes
-<br> 14  unexpected failures
-<br> 6   expected failures
+# of expected passes		1876
+<br>
+# of unexpected failures	32
+<br>
+# of expected failures		6
 </td>
 </tr>
 <tr>
@@ -104,9 +107,7 @@ OK
 sparc-sun-solaris2.6
 </td>
 <td>
---enable-java-gc=boehm
-<br>--enable-fast-character
-<br>--enable-threads=posix
+--enable-threads=posix
 </td>
 <td>
 OK
@@ -129,6 +130,6 @@ successfully, so differences should be expected.
 <a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>
 in this format.
 
-<p><i>Last modified on June 23, 1999.</i>
+<p><i>Last modified on June 24, 1999.</i>
 
 <!--#include virtual="/include/footer-subpages.html"-->
