Mention patch mailing list on contribute patch

--- a/htdocs/java/contribute.html
+++ b/htdocs/java/contribute.html
@@ -61,9 +61,8 @@
        latest version of GNU diff.
   </ul>
 
-  <p> We currently do not have a mailing list for patches, but we will
-  at some point.  In the mean time, send mail to <a
-  href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>
-  describing your patch, and somebody will tell you what to do next.
+    <p>Send patches to <a
+	href="mailto:java-patches@sourceware.cygnus.com">the patch mailing
+	list</a>.  This list is <a href="/ml/java-patches/">archived</a>.
 
 <!--#include virtual="/include/footer-subpages.html"-->
