Move older news items from the home page to news.html.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,25 @@ home page</a>.
 
 <dl>
 
+<dt><b>April 20, 1999</b></dt>
+<dd>
+Yes, it is not a hoax: The egcs steering committee is appointed official
+GNU maintainer for GCC; the egcs team will be responsible for rolling out
+future GCC releases.
+
+<br>This will require some changes in policy and procedures for the project.
+We will provide more information on those changes as they are available.
+
+<br><a href="http://www.gnu.org">www.gnu.org</a> has the FSF announcement
+under the "GNU flashes" heading.
+</dd>
+
+<dt><b>April 15, 1999</b></dt>
+<dd>
+Mark Mitchell is now a co-maintainer of the C++ front end along with
+Jason Merrill.
+</dd>
+
 <dt><b>April 13, 1999</b></dt>
 <dd>
 We have set up a new <a href="lists.html">mailing list</a>
@@ -265,7 +284,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on June 20, 1999.</i>
+<i>Last modified on June 26, 1999.</i>
 
 </body>
 </html>
