hpux11 news item.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,6 +84,12 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>June 29, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated hpux11 support.
+<small>(Note that this will not yet be included in gcc 2.95.)</small>
+</dd>
+
 <dt><b>June 15, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated a major rewrite of the Intel IA-32
@@ -148,7 +154,7 @@ bounds-checking for Fortran code.)
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on June 26, 1999.</i></small>
+<small><i>Last modified on June 29, 1999.</i></small>
 </address>
 
 </body>
