Notes for sparc-sun-solaris2.7, which I forgot to commit recently.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -198,13 +198,22 @@ You will need
 newer for a working gcc/egcs. It is strongly recommended to recompile binutils
 if you initially built it with gcc-2.7.2.x.
 
+<p><b>sparc-sun-solaris2.7</b><br>
+<p>Sun patch 107058-01 (1999-01-13) for SPARC Solaris 7 triggers a bug in
+the dynamic linker.  This problem (Sun bug 4210064) affects GCC 2.8
+and later, including all EGCS releases.  To avoid this problem, do not
+install Sun patch 107058-01 until after Sun releases a patch for bug
+4210064.  Sun has a fix for this bug but (as of 1999-06-24) has not
+yet released it as a patch.
+
+
 <p><b>sparc-unknown-linux-gnulibc1</b><br>
 It has been reported that you might need 
 <a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a>
 for this platform too.
 
 <hr>
-<i>Last modified on May 29, 1999.</i>
+<i>Last modified on July  1, 1999.</i>
 
 </body>
 </html>
