Specify in which formats we like to receive patches.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -75,11 +75,14 @@ contributions must meet.</p>
        for format and content.<br>
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
-  <li> The patch itself.  If you are accessing the <a href="cvs.html">
+  <li> <p>The patch itself.  If you are accessing the <a href="cvs.html">
        CVS repository</a> at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
        else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
        If your version of diff does not support these options, then get the
-       latest version of GNU diff.
+       latest version of GNU diff.</p>
+       <p>We accept patches as plain text (preferred for the compilers
+       themselves), MIME attachments (preferred for the web pages),
+       or as uuencoded gzipped text.</p>
   </ul>
 
   <p>When you have all these pieces, bundle them up in a mail message and
@@ -89,7 +92,7 @@ contributions must meet.</p>
   mailinglist.
 
 <hr>
-<i>Last modified on June 14, 1999.</i>
+<i>Last modified on July  1, 1999.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
