Clarify text per Craig's  suggestions.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -23,9 +23,9 @@ it's rather rare to see these emitted by GCC yet, errors of the basic form:
 /usr/tmp/ccaNlqBc.s:22:unknown instruction: fcomip
 /usr/tmp/ccaNlqBc.s:50:unknown instruction: fucomip
 </pre>
-are symptoms of this problem.   You man work around this by not 
-building affected files with that flag or using the GNU assembler.   
-Users of GNU assembler should see the note for hazards on doing so below.
+are symptoms of this problem.   You may work around this by not 
+building affected files with that flag or by using the GNU assembler.   
+Users of GNU assembler should see the note below for hazards on doing so.
 
 If you choose to configure with <code>--enable-shared</code> you should also
 specificy <code>--with-gnu-as --disable-multilib</code> even if you are not
