Clarify UDK english slightly.   Remove CFLAGS from example configure.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -89,14 +89,15 @@ command like this:
 
 <p>
 <code>
-CC=/udk/usr/ccs/bin/cc CFLAGS=-O <i>/your/path/to/</i>egcs/configure
+CC=/udk/usr/ccs/bin/cc <i>/your/path/to/</i>egcs/configure
 --host=i686-pc-udk --target=i686-pc-udk --exec-prefix=udk-
 </code>
 <i>You should substitute 'i686' in the above command with the appropriate
 processor for your host.</i>
 
-<p> You should follow this with a `<code>make bootstrap</code>'  After you do a
-`<code>make install</code>' you can then access the UDK-targeted EGCS tools by adding
+<p> You should follow this with a `<code>make bootstrap</code>'  then
+`<code>make install</code>'.  You can then access the UDK-targeted EGCS 
+tools by adding
 <code>udk-</code> before the commonly known name.  For example, to invoke the C
 compiler, you would use `<code>udk-gcc</code>'.  They will coexist peacefully with
 any native-target EGCS tools you may have installed.
