* libgcj-platforms.html: Updated with build results from Net 	developers.

--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -124,6 +124,43 @@ OK
 # of expected failures		6
 </td>
 </tr>
+<tr>
+<td>
+alphapca56-unknown-linux-gnu
+</td>
+<td>
+--enable-threads=posix
+<br>--enable-fast-character
+<br>--enable-java-gc=boehm
+</td>
+<td>
+OK
+</td>
+<td>
+# of expected passes		187
+<br>
+# of unexpected failures	19
+<br>
+# of expected failures		18
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-solaris2.6
+</td>
+<td>
+</td>
+<td>
+OK
+</td>
+<td>
+# of expected passes		60
+<br>
+# of unexpected failures	68
+<br>
+# of expected failures		96
+</td>
+</tr>
 </table>
 
 <p>A list of deviations from the 
