* libgcj-platforms.html: Updated with sparc-sun-solaris2.7 results.

--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -161,6 +161,24 @@ OK
 # of expected failures		96
 </td>
 </tr>
+<tr>
+<td>
+sparc-sun-solaris2.7
+</td>
+<td>
+--enable-java-gc=no
+</td>
+<td>
+OK
+</td>
+<td>
+# of expected passes		196
+<br>
+# of unexpected failures	22
+<br>
+# of expected failures		8
+</td>
+</tr>
 </table>
 
 <p>A list of deviations from the 
