Present links in an order more consistent with how they should be followed

--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -27,6 +27,9 @@ specific installation instructions carefully.  Then check the
 <a href="../faq.html">FAQ</a> to see if your problem is covered before you file
 a bug report.
 
+<p><em>Before</em> starting the build/install procedure <em>please</em> browse the
+<a href="specific.html">host/target specific installation notes</a>.
+
 <p>The installation procedure is broken into four steps.
 
 <ul>
@@ -38,12 +41,9 @@ a bug report.
 
 </ul>
 
-<p>Before starting the build/install procedure <b>please</b> browse the
-<a href="specific.html">host/target specific installation notes</a>.
-
 <hr>
 <a href="../index.html">Return to the egcs home page</a>
 <hr>
-<i>Last modified on February 22, 1999.</i>
+<i>Last modified on July 6, 1999.</i>
 </body>
 </html>
