Describe sparc64 problems

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -224,8 +224,15 @@ It has been reported that you might need
 <a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a>
 for this platform too.
 
+<p><b>sparc64-*-*</b><br>
+GCC version 2.95 is not able to compile code correctly for <code>sparc64</code>
+targets.  Users of the Linux kernel, at least, can use the <code>sparc32</code>
+program to start up a new shell invocation with an environment that causes
+<code>configure</code> to recognize (via <code>uname -a</code>) the
+system as <code>sparc-*-*</code> instead.
+
 <hr>
-<i>Last modified on July  1, 1999.</i>
+<i>Last modified on July 6, 1999.</i>
 
 </body>
 </html>
