fix problems caught by weblint

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -27,7 +27,7 @@ will build the entire egcs compiler system, which includes the following steps:
   <li> Perform a comparison test of the stage2 and stage3 compilers.<p>
 
   <li> Build runtime libraries using the stage3 compiler from the previous
-  step.<p>
+  step.
 </ul>
 
 <p>If you are short on disk space you might consider `<code>make 
@@ -68,7 +68,7 @@ following steps:
   <li> Build the compiler (single stage only).<p>
 
   <li> Build runtime libraries using the compiler from the previous
-  step.<p>
+  step.
 </ul>
 
 <p>Note that if an error occurs in any step the make process will exit.
@@ -83,7 +83,7 @@ the number of processors in your machine.
 
 <p>
 <hr>
-<i>Last modified on June 5, 1999.</i>
+<i>Last modified on July 6, 1999.</i>
 
 </body>
 </html>
