--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -137,7 +137,7 @@ egcs.  A partial list of supported <tt>options</tt>:
 
   <li> <tt>--enable-languages=</tt><i>lang1</i><tt>,</tt><i>lang2</i><tt>,...</tt>
   -- Specify that only a particular subset of compilers and their runtime libraries
-  should be built. For a list of valid values for <i>lang</i><t>x</t> you can issue
+  should be built. For a list of valid values for <i>lang</i><tt>x</tt> you can issue
   the following command in the <tt>gcc</tt> directory of your egcs source tree:<br>
   <tt>
   grep language= */config-lang.in
@@ -175,7 +175,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on May 20, 1999.</i>
+<i>Last modified on July 6, 1999.</i>
 
 </body>
 </html>
