--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -7,7 +7,7 @@
 
 <p>Now that egcs has been built and tested, you can install it with
 `<code>cd <i>objdir</i>; make install</code>' for a native compiler or
-`<code>cd <i>objdir</i>; make install LANGUAGES="c c++"<code>' for 
+`<code>cd <i>objdir</i>; make install LANGUAGES="c c++"</code>' for 
 a cross compiler (note installing cross compilers will be easier in the 
 next release!).
 
@@ -31,7 +31,7 @@ it!)
 
 <p>
 <hr>
-<i>Last modified on May 29, 1999.</i>
+<i>Last modified on July 6, 1999.</i>
 
 </body>
 </html>
