--- a/htdocs/gcc-2.95/branch.html
+++ b/htdocs/gcc-2.95/branch.html
@@ -26,11 +26,8 @@ option #2 or #3 is recommended.
 released, snapshots will return to tracking the mainline sources.
 
 <hr>
-<p>All patches for the gcc-2.95 release branch must be approved by either
-someone with global write privs or that maintains the specific file being
-patched.   At some point in the future, all patches will need to go through
-the release coordinator.  A message will be sent to the egcs list at that
-time.
+<p>All patches for the gcc-2.95 release branch must be approved by the
+release coordinator (Jeff Law).
 
 <p>We are only accepting bugfix patches for the gcc-2.95 release.
 
@@ -41,7 +38,7 @@ release.
 
 <hr>
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  May 19, 1999</i>
+<p><i>Last modified:  July 9, 1999</i>
 
 </body>
 </html>
