--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -6,10 +6,10 @@
 <h1 align="center">gcc-2.95 Caveats</h1>
 
 <ul>
-  <li>egcs has an integrated libstdc++, but does not have an integrated libg++.
-  Furthermore old libg++ releases will not work with gcc-2.95; HJ Lu has made a 
-  <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
-  libg++ snapshot</a> available which may work with egcs.
+  <li>gcc-2.95 has an integrated libstdc++, but does not have an integrated
+  libg++.  Furthermore old libg++ releases will not work with gcc-2.95.  You can
+  retrieve a recent copy of libg++ from the
+  <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/libg++-2.8.1.3.tar.gz">  egcs ftp server</a>.
   <br>Note most C++ programs only need libstdc++.
 
   <li> Exception handling may not work with shared libraries, particularly
@@ -17,13 +17,13 @@
   handling is known to work on x86-linux platforms with shared libraries.
 
   <li> Some versions of the Linux kernel have bugs which prevent them
-  from being compiled or from running when compiled by egcs.  See
+  from being compiled or from running when compiled by gcc-2.95.  See
   <a href="../faq.html#linuxkernel">the FAQ</a> for additional information.
 
   <li> In general, gcc-2.95 is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than g++-2.7, g++-2.8, egcs-1.0, or egcs-1.1.
   As a result it may be necessary to fix C++ code before it will compile with
-  egcs.
+  gcc-2.95.
 
   <li>G++ is also converting toward the ISO C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
@@ -35,7 +35,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  June 20, 1999</i>
+<p><i>Last modified:  July 9, 1999</i>
 
 </body>
 </html>
