Add various new features

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -22,7 +22,7 @@
       default.
   <li>Support for new processors  (c4x, hypersparc, sparclite86x, sh4, ppc750
       and others).
-  <li>Support for new systems (OpenBSD, others)
+  <li>Support for new systems (OpenBSD, FreeBSD, UWIN, Interix, others)
   <li><a href="http://sourceware.cygnus.com/java/gcj-announce.txt">Java</a>
       front-end has been integrated.  A <a href="http://egcs.cygnus.com/javaannounce.html">runtime library</a> is available separately.
   <li><a href="../news/chill.html">Chill</a> front-end and runtime has been
@@ -31,13 +31,34 @@
   <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
       default.
   <li>Experimental internationalization support.
+  <li>-mschedule=8000 will optimize code for PA8000 class processors; -mpa-risc-2-0 will generate code for PA2.0 processors
+  <li>Various micro-optimizations for the ia32 port. K6 optimizations
+  <li>Compiler will attempt to align doubles in the stack on the ia32 port
+  <li>Alpha EV6 support
+  <li>sh4 support
+  <li>arm-linux support
+  <li>push/pop pragmas?
+  <li>Boehm garbage collector support in libobjc.
+  <li>multibyte character support
+  <li>Major revamp of GIV detection, combination and simplification.
+  <li>Better support for complex values
+  <li>Plus the usual mountain of bugfixes
+  <li>Some compile-time speedups for pathalogical problems
+  <li>vxWorks targets include support for vxWorks threads
+  <li>StrongARM 110 and ARM9 support added.  ARM Scheduling parameters rewritten.
+  <li>Various changes to the MIPS port to avoid assembler macros, which
+  in turn improves performance
+  <li>ISO C9X support
+  <li> Additional improvements to register allocation and reloading
+  <li>Major rewrite of ns32k port
+  <li>Various performance improvements to the i960 port.
   <li>Core compiler is based on the gcc2 development tree from Sept 30, 1998,
   so we have all of the <a href="../egcs-1.0/features-2.8.html">features
   found in gcc-2.8</a>.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  June 20, 1999</i>
+<p><i>Last modified:  July 9, 1999</i>
 
 </body>
 </html>
